linked larger photos(temporary)

--- a/html/index.html
+++ b/html/index.html
@@ -20,9 +20,20 @@
         <img src="../photos/thumbnails/10.jpg" alt="image 10">
         <img src="../photos/thumbnails/11.jpg" alt="image 11">
         <img src="../photos/thumbnails/12.jpg" alt="image 12">
-
-
-
+    </div>
+    <div class="Large photos">
+      <img src="../photos/01.jpg" alt="image 1">
+      <img src="../photos/02.jpg" alt="image 2">
+      <img src="../photos/03.jpg" alt="image 3">
+      <img src="../photos/04.jpg" alt="image 4">
+      <img src="../photos/05.jpg" alt="image 5">
+      <img src="../photos/06.jpg" alt="image 6">
+      <img src="../photos/07.jpg" alt="image 7">
+      <img src="../photos/08.jpg" alt="image 8">
+      <img src="../photos/09.jpg" alt="image 9">
+      <img src="../photos/10.jpg" alt="image 10">
+      <img src="../photos/11.jpg" alt="image 11">
+      <img src="../photos/12.jpg" alt="image 12">
     </div>
   </body>
 </html>
