--- a/html/index.html
+++ b/html/index.html
@@ -2,26 +2,75 @@
 <html lang="en" dir="ltr">
   <head>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="jquery-3.5.0.min.js"></script>
     <meta charset="utf-8">
+    <!-- <script src="script.js"></script> -->
     <title>Photo Gallery</title>
   </head>
   <body>
-    <script src="script.js"></script>
-    <div class = "main thumbnails">
-        <img src="../photos/thumbnails/01.jpg" alt="image 1">
-        <img src="../photos/thumbnails/02.jpg" alt="image 2">
-        <img src="../photos/thumbnails/03.jpg" alt="image 3">
-        <img src="../photos/thumbnails/04.jpg" alt="image 4">
-        <img src="../photos/thumbnails/05.jpg" alt="image 5">
-        <img src="../photos/thumbnails/06.jpg" alt="image 6">
-        <img src="../photos/thumbnails/07.jpg" alt="image 7">
-        <img src="../photos/thumbnails/08.jpg" alt="image 8">
-        <img src="../photos/thumbnails/09.jpg" alt="image 9">
-        <img src="../photos/thumbnails/10.jpg" alt="image 10">
-        <img src="../photos/thumbnails/11.jpg" alt="image 11">
-        <img src="../photos/thumbnails/12.jpg" alt="image 12">
+    <div class = "main-thumbnails">
+      <div class="thumbnails">
+          <img src="../photos/thumbnails/01.jpg" alt="image 1">
+          <h3>Hay Bales</h3>
+          <p>I love hay bales. Took this snap on a drive through the countryside past some straw fields.</p>
+      </div>
+      <div class="thumbnails">
+          <img src="../photos/thumbnails/02.jpg" alt="image 2">
+          <h3>Lake</h3>
+          <p>The lake was so calm today. We had a great view of the snow on the mountains from here.</p>
+      </div>
+      <div class="thumbnails">
+          <img src="../photos/thumbnails/03.jpg" alt="image 3" style="width:100%">
+          <h3>Canyon</h3>
+          <p>I hiked to the top of the mountain and got this picture of the canyon and trees below.</p>
+      </div>
+      <div class="thumbnails">
+          <img src="../photos/thumbnails/04.jpg" alt="image 4" style="width:100%">
+          <h3>Iceberg</h3>
+          <p>It was amazing to see an iceberg up close, it was so cold but didn’t snow today.</p>
+      </div>
+      <div class="thumbnails">
+          <img src="../photos/thumbnails/05.jpg" alt="image 5" style="width:100%">
+          <h3>Desert</h3>
+          <p>The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons.</p>
+      </div>
+      <div class="thumbnails">
+          <img src="../photos/thumbnails/06.jpg" alt="image 6" style="width:100%">
+          <h3>Fall</h3>
+          <p>Fall is coming, I love when the leaves on the trees start to change color.</p>
+      </div>
+      <div class="thumbnails">
+          <img src="../photos/thumbnails/07.jpg" alt="image 7" style="width:100%">
+          <h3>Plantation</h3>
+          <p>I drove past this plantation yesterday, everything is so green!</p>
+      </div>
+      <div class="thumbnails">
+          <img src="../photos/thumbnails/08.jpg" alt="image 8" style="width:100%">
+          <h3>Dunes</h3>
+          <p>My summer vacation to the Oregon Coast. I love the sandy dunes!</p>
+      </div>
+      <div class="thumbnails">
+          <img src="../photos/thumbnails/09.jpg" alt="image 9" style="width:100%">
+          <h3>Countryside Lane</h3>
+          <p>We enjoyed a quiet stroll down this countryside lane. </p>
+      </div>
+      <div class="thumbnails">
+          <img src="../photos/thumbnails/10.jpg" alt="image 10" style="width:100%">
+          <h3>Sunset</h3>
+          <p>Sunset at the coast! The sky turned a lovely shade of orange.</p>
+      </div>
+      <div class="thumbnails">
+          <img src="../photos/thumbnails/11.jpg" alt="image 11" style="width:100%">
+          <h3>Cave</h3>
+          <p>I did a tour of a cave today and the view of the landscape below was breathtaking.</p>
+      </div>
+      <div class="thumbnails">
+          <img src="../photos/thumbnails/12.jpg" alt="image 12" style="width:100%">
+          <h3>Bluebells</h3>
+          <p>I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in.</p>
+      </div>
     </div>
-    <div class="Large photos">
+    <!-- <div class="Large photos">
       <a href="#"><img src="../photos/01.jpg" alt="image 1"></a>
       <a href="#"><img src="../photos/02.jpg" alt="image 2"></a>
       <a href="#"><img src="../photos/03.jpg" alt="image 3"></a>
@@ -34,6 +83,6 @@
       <a href="#"><img src="../photos/10.jpg" alt="image 10"></a>
       <a href="#"><img src="../photos/11.jpg" alt="image 11"></a>
       <a href="#"><img src="../photos/12.jpg" alt="image 12"></a>
-    </div>
+    </div> -->
   </body>
 </html>
