--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <script src="jquery-3.5.0.min.js"></script>
+    <script src="../js/jquery-3.5.0.min.js"></script>
     <meta charset="utf-8">
     <!-- <script src="script.js"></script> -->
     <title>Photo Gallery</title>
