--- a/html/index.html
+++ b/html/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="../css/styles.css">
     <script src="../js/jquery-3.5.0.min.js"></script>
     <meta charset="utf-8">
-    <!-- <script src="script.js"></script> -->
     <title>Photo Gallery</title>
   </head>
   <body>
