--- a/html/index.html
+++ b/html/index.html
@@ -9,12 +9,12 @@
   <body>
     <div class = "main-thumbnails">
       <div class="thumbnails">
-          <img src="../photos/thumbnails/01.jpg" alt="image 1">
+          <img src="../photos/thumbnails/01.jpg" alt="image 1" style="width:100%">
           <h3>Hay Bales</h3>
           <p>I love hay bales. Took this snap on a drive through the countryside past some straw fields.</p>
       </div>
       <div class="thumbnails">
-          <img src="../photos/thumbnails/02.jpg" alt="image 2">
+          <img src="../photos/thumbnails/02.jpg" alt="image 2" style="width:100%">
           <h3>Lake</h3>
           <p>The lake was so calm today. We had a great view of the snow on the mountains from here.</p>
       </div>
