Added Lightbox and viewport meta tag

--- a/html/index.html
+++ b/html/index.html
@@ -2,8 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
+    <link href="../lightbox.css" rel="stylesheet" />
     <script src="../js/jquery-3.5.0.min.js"></script>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photo Gallery</title>
   </head>
   <body>
@@ -83,5 +85,6 @@
       <a href="#"><img src="../photos/11.jpg" alt="image 11"></a>
       <a href="#"><img src="../photos/12.jpg" alt="image 12"></a>
     </div> -->
+    <script src="../lightbox.js"></script>
   </body>
 </html>
