--- a/html/index.html
+++ b/html/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link href="../lightbox2-2.11.1/dist/css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
-    <link href="../lightbox.css" rel="stylesheet" />
     <script src="../js/jquery-3.5.0.min.js"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
