Linked the large photos

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link href="../lightbox2-2.11.1/dist/css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../css/styles.css">
-    <script src="../js/jquery-3.5.0.min.js"></script>
+    <link href="css/lightbox.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <script src="js/jquery-3.5.0.min.js"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photo Gallery</title>
@@ -11,62 +11,86 @@
   <body>
     <div class = "main-thumbnails">
       <div class="thumbnails">
-          <img src="../photos/thumbnails/01.jpg" alt="image 1" style="width:100%">
+          <a href="photos/01.jpg" data-lightbox="largephotos" data-title="Hay bales">
+            <img src="photos/thumbnails/01.jpg" alt="image 1" style="width:100%">
+          </a>
           <h3>Hay Bales</h3>
           <p>I love hay bales. Took this snap on a drive through the countryside past some straw fields.</p>
       </div>
       <div class="thumbnails">
-          <img src="../photos/thumbnails/02.jpg" alt="image 2" style="width:100%">
+          <a href="photos/02.jpg" data-lightbox="largephotos" data-title="Lake">
+          <img src="photos/thumbnails/02.jpg" alt="image 2" style="width:100%">
+          </a>
           <h3>Lake</h3>
           <p>The lake was so calm today. We had a great view of the snow on the mountains from here.</p>
       </div>
       <div class="thumbnails">
-          <img src="../photos/thumbnails/03.jpg" alt="image 3" style="width:100%">
+          <a href="photos/03.jpg" data-lightbox="largephotos" data-title="Canyon">
+          <img src="photos/thumbnails/03.jpg" alt="image 3" style="width:100%">
+          </a>
           <h3>Canyon</h3>
           <p>I hiked to the top of the mountain and got this picture of the canyon and trees below.</p>
       </div>
       <div class="thumbnails">
-          <img src="../photos/thumbnails/04.jpg" alt="image 4" style="width:100%">
+          <a href="photos/04.jpg" data-lightbox="largephotos" data-title="Iceberg">
+          <img src="photos/thumbnails/04.jpg" alt="image 4" style="width:100%">
+          </a>
           <h3>Iceberg</h3>
           <p>It was amazing to see an iceberg up close, it was so cold but didn’t snow today.</p>
       </div>
       <div class="thumbnails">
-          <img src="../photos/thumbnails/05.jpg" alt="image 5" style="width:100%">
+          <a href="photos/05.jpg" data-lightbox="largephotos" data-title="Desert">
+          <img src="photos/thumbnails/05.jpg" alt="image 5" style="width:100%">
+          </a>
           <h3>Desert</h3>
           <p>The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons.</p>
       </div>
       <div class="thumbnails">
-          <img src="../photos/thumbnails/06.jpg" alt="image 6" style="width:100%">
+          <a href="photos/06.jpg" data-lightbox="largephotos" data-title="Fall">
+          <img src="photos/thumbnails/06.jpg" alt="image 6" style="width:100%">
+          </a>
           <h3>Fall</h3>
           <p>Fall is coming, I love when the leaves on the trees start to change color.</p>
       </div>
       <div class="thumbnails">
-          <img src="../photos/thumbnails/07.jpg" alt="image 7" style="width:100%">
+          <a href="photos/07.jpg" data-lightbox="largephotos" data-title="Plantation">
+          <img src="photos/thumbnails/07.jpg" alt="image 7" style="width:100%">
+          </a>
           <h3>Plantation</h3>
           <p>I drove past this plantation yesterday, everything is so green!</p>
       </div>
       <div class="thumbnails">
-          <img src="../photos/thumbnails/08.jpg" alt="image 8" style="width:100%">
+          <a href="photos/08.jpg" data-lightbox="largephotos" data-title="Dunes">
+          <img src="photos/thumbnails/08.jpg" alt="image 8" style="width:100%">
+          </a>
           <h3>Dunes</h3>
           <p>My summer vacation to the Oregon Coast. I love the sandy dunes!</p>
       </div>
       <div class="thumbnails">
-          <img src="../photos/thumbnails/09.jpg" alt="image 9" style="width:100%">
+          <a href="photos/09.jpg" data-lightbox="largephotos" data-title="Countryside Lane">
+          <img src="photos/thumbnails/09.jpg" alt="image 9" style="width:100%">
+          </a>
           <h3>Countryside Lane</h3>
           <p>We enjoyed a quiet stroll down this countryside lane. </p>
       </div>
       <div class="thumbnails">
-          <img src="../photos/thumbnails/10.jpg" alt="image 10" style="width:100%">
+          <a href="photos/010.jpg" data-lightbox="largephotos" data-title="Sunset">
+          <img src="photos/thumbnails/10.jpg" alt="image 10" style="width:100%">
+          </a>
           <h3>Sunset</h3>
           <p>Sunset at the coast! The sky turned a lovely shade of orange.</p>
       </div>
       <div class="thumbnails">
-          <img src="../photos/thumbnails/11.jpg" alt="image 11" style="width:100%">
+          <a href="photos/011.jpg" data-lightbox="largephotos" data-title="Cave">
+          <img src="photos/thumbnails/11.jpg" alt="image 11" style="width:100%">
+          </a>
           <h3>Cave</h3>
           <p>I did a tour of a cave today and the view of the landscape below was breathtaking.</p>
       </div>
       <div class="thumbnails">
-          <img src="../photos/thumbnails/12.jpg" alt="image 12" style="width:100%">
+          <a href="photos/012.jpg" data-lightbox="largephotos" data-title="Bluebells">
+          <img src="photos/thumbnails/12.jpg" alt="image 12" style="width:100%">
+          </a>
           <h3>Bluebells</h3>
           <p>I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in.</p>
       </div>
@@ -85,6 +109,6 @@
       <a href="#"><img src="../photos/11.jpg" alt="image 11"></a>
       <a href="#"><img src="../photos/12.jpg" alt="image 12"></a>
     </div> -->
-    <script src="../lightbox.js"></script>
+    <script src="js/lightbox.js"></script>
   </body>
 </html>
