--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <title>Photo Gallery</title>
   </head>
   <body>
+    <div id="navbar">  
+      <div class="wrapper">
+        <div class="searchbox">
+          <input type="text" class="input">
+        </div>
+      </div>
+    </div>
     <div class = "main-thumbnails">
       <div class="thumbnails">
           <a href="photos/01.jpg" data-lightbox="largephotos" data-title="Hay bales <p>I love hay bales. Took this snap on a drive through the countryside past some straw fields.</p>">
