--- a/index.html
+++ b/index.html
@@ -3,16 +3,28 @@
   <head>
     <link href="css/lightbox.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <script src="https://kit.fontawesome.com/1d8fef5a0c.js" crossorigin="anonymous"></script>
     <script src="js/jquery-3.5.0.min.js"></script>
+    <script>
+      $(document).ready(function(){
+        $(".searchbtn").click(function(){
+          // $(this).toggleClass("bg-gray");
+          $(".input").focus().toggleClass("active-width").val('');
+        });
+      });
+    </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photo Gallery</title>
   </head>
   <body>
-    <div id="navbar">  
+    <div id="navbar">
       <div class="wrapper">
         <div class="searchbox">
           <input type="text" class="input">
+          <div class="searchbtn">
+            <i class="fas fa-search"></i>
+          </div>
         </div>
       </div>
     </div>
