--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <script src="https://kit.fontawesome.com/1d8fef5a0c.js" crossorigin="anonymous"></script>
     <script src="js/jquery-3.5.0.min.js"></script>
+    <script src="js/garand-sticky-73b0fbe/jquery.sticky.js"></script>
     <script>
       $(document).ready(function(){
         $(".searchbtn").click(function(){
