--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <script>
       $(document).ready(function(){
         $(".searchbtn").click(function(){
-          // $(this).toggleClass("bg-gray");
           $(".input").focus().toggleClass("active-width").val('');
         });
       });
@@ -115,6 +114,16 @@
           <p>I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in.</p>
       </div>
     </div>
+    <!-- <script src="https://kit.fontawesome.com/1d8fef5a0c.js" crossorigin="anonymous"></script>
+    <script src="js/jquery-3.5.0.min.js"></script>
+    <script src="js/garand-sticky-73b0fbe/jquery.sticky.js"></script>
+    <script>
+      $(document).ready(function(){
+        $(".searchbtn").click(function(){
+          $(".input").focus().toggleClass("active-width").val('');
+        });
+      });
+    </script> -->
     <script src="js/lightbox.js"></script>
   </body>
 </html>
