--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="navbar">
       <div class="wrapper">
         <div class="searchbox">
-          <input type="text" class="input">
+          <input type="text" class="input" id="searchhere">
           <div class="searchbtn">
             <i class="fas fa-search"></i>
           </div>
@@ -114,16 +114,15 @@
           <p>I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in.</p>
       </div>
     </div>
-    <!-- <script src="https://kit.fontawesome.com/1d8fef5a0c.js" crossorigin="anonymous"></script>
-    <script src="js/jquery-3.5.0.min.js"></script>
-    <script src="js/garand-sticky-73b0fbe/jquery.sticky.js"></script>
     <script>
-      $(document).ready(function(){
-        $(".searchbtn").click(function(){
-          $(".input").focus().toggleClass("active-width").val('');
-        });
-      });
-    </script> -->
+      document.getElementById("searchhere").addEventListener("keyup", myFunction);
+
+      function myFunction() {
+        var x = document.getElementById("searchhere");
+        x.value = x.value.toLowerCase();
+        console.log(x.value);
+      }
+    </script>
     <script src="js/lightbox.js"></script>
   </body>
 </html>
