--- a/index.html
+++ b/index.html
@@ -114,15 +114,7 @@
           <p>I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in.</p>
       </div>
     </div>
-    <script>
-      document.getElementById("searchhere").addEventListener("keyup", myFunction);
-
-      function myFunction() {
-        var x = document.getElementById("searchhere");
-        x.value = x.value.toLowerCase();
-        console.log(x.value);
-      }
-    </script>
     <script src="js/lightbox.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
