--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <p>My summer vacation to the Oregon Coast. I love the sandy dunes!</p>
       </div>
       <div class="thumbnails">
-          <a href="photos/09.jpg" data-lightbox="largephotos" data-title="We enjoyed a quiet stroll down this countryside lane.>">
+          <a href="photos/09.jpg" data-lightbox="largephotos" data-title="We enjoyed a quiet stroll down this countryside lane.">
           <img src="photos/thumbnails/09.jpg" alt="Countryside Lane" style="width:100%">
           </a>
           <h3>Countryside Lane</h3>
